--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@rocketseat/eslint-config": "2.1.0",
     "@types/node": "20.8.6",
+    "eslint": "8.54.0",
     "tsup": "7.2.0",
     "tsx": "3.13.0",
     "typescript": "5.2.2"
   },
   "dependencies": {
-    "fastify": "4.24.2"
+    "dotenv": "16.3.1",
+    "fastify": "4.24.2",
+    "zod": "3.22.4"
   }
 }
